--- a/frontend/src/pages/events/Event.css
+++ b/frontend/src/pages/events/Event.css
@@ -1,4 +1,4 @@
-.event-container {
+.event-container { 
     display: flex;
     max-width: 900px;
     margin: auto;
@@ -35,7 +35,7 @@
     flex-direction: column;
     gap: 12px;
     max-width: 400px;
-    margin: auto;
+    margin: 0 auto; 
 }
 
 .input-pair {
@@ -43,17 +43,22 @@
     flex-direction: column;
 }
 
+/* Estilo para símbolo ($) */
 .input-group {
     display: flex;
     align-items: center;
+    width: 60%;
+    
 }
 
 .input-symbol {
-    padding: 0 8px;
+    padding: 5px 8px;
     background: #eee;
     border: 1px solid #ccc;
     border-right: none;
     border-radius: 4px 0 0 4px;
+    font-weight: bold;
+    color: #555;
 }
 
 .input-group input {
@@ -61,9 +66,11 @@
     border: 1px solid #ccc;
     border-left: none;
     border-radius: 0 4px 4px 0;
-    padding: 8px;
+    padding: 8px 12px;
+    font-size: 14px;
+    box-sizing: border-box;
 }
-
+/*Estilo para boton de registro */
 .message {
     margin-top: 10px;
     color: green;
@@ -77,9 +84,25 @@
     border: none;
     border-radius: 6px;
     cursor: pointer;
+    width: fit-content;
+    align-self: center;
+    font-size: 16px;
+    margin-top: 10px;
 }
 
 .register-btn:hover {
     background-color: #45a049;
 }
+/*mensajes de erroro */
+.error-text {
+    color: red;
+    font-size: 0.85rem;
+    margin-top: 4px;
+    margin-bottom: 2px;
+    display: block;
+}
+input.error {
+    border: 1px solid red;
+}
+
 
