modificacion de userdashboard, configuracion de select preferencias

--- a/frontend/src/pages/users/dashboard/Dashboard_user.css
+++ b/frontend/src/pages/users/dashboard/Dashboard_user.css
@@ -130,7 +130,7 @@
     padding-bottom: 4px;
   }
   
-  .input-edit input {
+  .input-edit input,select {
     border: none;
     outline: none;
     background: transparent;
