integracion de feed para ver los eventos y mejoras en la proteccion de rutas

--- a/frontend/src/pages/events/create_event/Event.css
+++ b/frontend/src/pages/events/create_event/Event.css
@@ -30,6 +30,10 @@
 
 /* Estilos del contenedor principal */
 .event-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     min-height: 100vh;
     background: linear-gradient(to bottom, var(--background-light), white);
