--- a/frontend/src/pages/users/dashboard/Dashboard_user.css
+++ b/frontend/src/pages/users/dashboard/Dashboard_user.css
@@ -55,218 +55,7 @@
   font-weight: bold;
 }
 
-/* Panel derecho - contenido usuario */
-.user-panel {
-  padding: 30px 40px;
-  background-color: #f9feff;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: 40px;
-  /* espacio entre imagen y formulario */
-  flex-wrap: nowrap;
-}
-
-/* Foto de perfil */
-.user-photo-section {
-  position: relative;
-  top: 110px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  border: 2px solid #c4c2c2;
-  box-shadow: 1px 1px 20px #cacaca;
-  border-radius: 0.8rem;
-  width: 220px;
-  height: auto;
-  align-items: center;
-}
-
-.user-photo-section h2 {
-  margin-bottom: 20px;
-}
-
-.user-photo {
-  width: 140px;
-  height: 140px;
-  border-radius: 50% / 60%;
-  background-color: #fff;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
-  margin-bottom: 8px;
-}
-
-.user-photo img.profile-img {
+.user-panel{
   width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.user-icon {
-  font-size: 1.5rem;
-  color: #000;
-}
-
-.edit-photo-btn {
-  background: none;
-  width: 80%;
-  border: 2px solid #c2bfbf;
-  color: #333;
-  font-size: 0.7rem;
-  cursor: pointer;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: 5px;
-  margin-top: 5px;
-  height: 28px;
-  align-items: center;
-  padding: 0 0.5rem;
-}
-
-.edit-photo-btn:hover {
-  background: #dbdee0;
-}
-
-.verified-badge {
-  font-weight: 700;
-  font-size: 0.8rem;
-  margin-top: 10px;
-}
-
-/* Formulario */
-.title-panel {
-  font-size: 1.5rem;
-}
-
-.info-panel {
-  font-size: 1rem;
-}
-
-.user-form {
-  width: 100%;
-  max-width: 800px;
-  height: 320px;
-  border: 2px solid #c0dae2;
-  display: flex;
-  padding: 0 0 10px 0;
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
-  gap: 10px;
-  box-shadow: 1px 1px 20px #cacaca;
-}
-@media screen and (max-width: 768px) {
-  .user-panel {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .user-photo-section,
-  .user-form {
-    width: 100%;
-    max-width: 90%;
-  }
-}
-label {
-  width: 40%;
-  display: flex;
-  flex-direction: column;
-  font-size: 0.8rem;
-  color: #333;
-  text-align: left;
-}
-
-.input-edit {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  padding-bottom: 4px;
-}
-
-.input-edit input,
-select {
-  background: transparent;
-  flex: 1;
-  font-size: 1rem;
-  padding: 10px;
-  border-radius: 10px;
-}
-
-.edit-icon {
-  cursor: pointer;
-  color: #333;
-}
-
-/* Botón guardar */
-.save-btn {
-  position: relative;
-  left: -220px;
-  width: fit-content;
-  align-self: self-end;
-  padding: 10px 20px;
-  margin: 0 0 20px 0;
-  background-color: #a0e0d6;
-  border: none;
-  border-radius: 8px;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-  color: #000;
-  font-weight: 300;
-  
-  cursor: pointer;
-  transform: scale();
-  transition: background transform 0.3s ease;
-}
-
-.save-btn:hover {
-  background-color: #8bd3c5;
-  transform: scale(1.1);
-}
-
-.stats-grid {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 30px;
-  width: 100%;
-  height: 100px;
-  position: relative;
-  margin-bottom: 20px;
-  top: 30px;
-
-}
-
-.stat-card {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  justify-content: center;
-  box-shadow: 0 10px 10px #c2bfbf;
-  width: 200px;
-  height: 100px;
-
-}
-
-.green .stat-number {
-  color: #49f552;
-  font-weight: 700;
-  font-size: 1.8rem;
-}
-
-.blue .stat-number {
-  color: #4c49f5;
-  font-weight: 700;
-  font-size: 1.8rem;
-}
-
-.purple .stat-number {
-  color: #a849f5;
-  font-weight: 700;
-  font-size: 1.8rem;
+  height: 100vh;
 }
