--- a/frontend/src/pages/users/dashboard/menu-item/profile/profile.css
+++ b/frontend/src/pages/users/dashboard/menu-item/profile/profile.css
@@ -1,6 +1,7 @@
 .profile-container {
     padding: 30px 40px;
-    background-color: #f9feff;
+    background-color: #000000;
+    color: #fff;
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -56,8 +57,8 @@
 .edit-photo-btn {
     background: none;
     width: 80%;
-    border: 2px solid #c2bfbf;
-    color: #333;
+    border: 2px solid #ffffff;
+    color: #f8f8f8;
     font-size: 0.7rem;
     cursor: pointer;
     display: flex;
@@ -121,7 +122,7 @@ label {
     display: flex;
     flex-direction: column;
     font-size: 0.8rem;
-    color: #333;
+    color: #ffffff;
     text-align: left;
 }
 
@@ -136,6 +137,7 @@ label {
 .input-edit input,
 select {
     background: transparent;
+    background-color: #fff;
     flex: 1;
     font-size: 1rem;
     padding: 10px;
