--- a/frontend/src/pages/users/dashboard/Dashboard_user.css
+++ b/frontend/src/pages/users/dashboard/Dashboard_user.css
@@ -4,7 +4,9 @@
   display: flex;
   justify-content: start;
   align-items: center;
-  background-color: #000000;
+  background-image: url("/background_dashboard.jpg");
+  background-size: cover;
+  background-position: center;
   min-height: 100vh;
   font-family: 'Segoe UI', sans-serif;
   padding: 2rem;
@@ -14,7 +16,8 @@
 .dashboard-card {
   display: flex;
   width: 100%;
-  background-color: #000000;
+  height: 100vh;
+  background-color: transparent;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
   overflow: hidden;
@@ -25,7 +28,7 @@
   width: 300px;
   display: flex;
   flex-direction: column;
-  background-color: #000000;
+  background-color: #000;
   padding: 20px;
   border-right: 1px solid #a0b7c6;
 }
