--- a/frontend/src/pages/auth/sign-up/SignUp.css
+++ b/frontend/src/pages/auth/sign-up/SignUp.css
@@ -9,6 +9,7 @@
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    border: 1px solid #fff;
 }
 
 @media (min-width: 768px) {
@@ -16,18 +17,32 @@
         flex-direction: row;
     }
 }
-
+.left-section h2, .left-section p, .left-section button{
+    position: relative;
+    z-index:2;
+}
 .left-section {
+    color: #fff;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #cce7ff;
+    background-image: url("/bg_sign-in.jpg");
     padding: 20px;
     width: 100%;
     border-radius: 0 100px 100px 0;
 }
-
+.left-section::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #0007;
+    transition: background-color 0.4s ease, content 0.3s ease;
+    z-index: 1;
+}
 @media (min-width: 768px) {
     .left-section {
         width: 50%;
@@ -96,6 +111,9 @@
 }
 
 .right-section {
+    color: #fff;
+    position: relative;
+    z-index: 2;
     display: flex;
     flex: 1;
     flex-direction: column;
@@ -122,7 +140,7 @@
     border-bottom: 2px solid #007bff; /* Color azul vibrante */
     box-shadow: 0px 4px 10px rgba(0, 123, 255, 0.4); /* Sombra azul */
     transform: scale(1.05); /* Pequeño aumento al hacer focus */
-    background-color: rgba(0, 123, 255, 0.05); /* Suave cambio de fondo */
+    background-color: rgb(255, 255, 255); /* Suave cambio de fondo */
 }
 
 .submit-button {
@@ -131,10 +149,10 @@
     margin-top: 40px;
     padding: 12px;
     background-color: black;
+    border: 1px solid #fff;
     color: white;
     font-size: 16px;
     font-weight: bold;
-    border: none;
     border-radius: 30px;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
